--- a/Natours/index.html
+++ b/Natours/index.html
@@ -30,7 +30,7 @@
 
 <main class="main">
 	<section class="section-about">
-		<div class="u-center-text u-margin-bottom-8">
+		<div class="u-center-text u-margin-bottom-big">
 			<h2 class="heading-secondary">
 				Exciting tours for adventurous people
 			</h2>
@@ -38,10 +38,18 @@
 
 		<div class="row">
 			<div class="col-1-of-2">
-				Lorem ipsum dolor sit amet.
+				<h3 class="heading-tertiary u-margin-bottom-small">You're gonna fall in love w/nature</h3>
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores, assumenda consectetur dolor error ex facere illum ipsam, ipsum laudantium magni nostrum omnis perferendis placeat recusandae ut veniam voluptatem voluptatibus.</p>
+				<h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus debitis deserunt doloremque eius esse.</p>
+				<a href="#" class="btn-text">Learn more &rarr;</a>
 			</div>
 			<div class="col-1-of-2">
-				Lorem ipsum dolor sit amet.
+				<div class="composition">
+					<img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+					<img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+					<img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+				</div>
 			</div>
 		</div>
 	</section>
